--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,10 @@
-title: Your awesome title
-email: your-email@domain.com
+title: Presentation Karaoke
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Grab 6-200 of your closest friends and present random topics
+  to the worst and most random slides ever created.
+  Fun, and you just might learn something.
 baseurl: "/presentation_karaoke" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
-# Build settings
 markdown: kramdown
 gems:
   - jekyll-feed
